2021 0805 로그인페이지 수정

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="wrap">
+    <!-- <div id="wrap">
         <header>
             <h1 class="main_titile">로그인</h1>
         </header>
@@ -35,12 +35,24 @@
                 <button class="send_btn">확인</button>
             </form>
         </div>
+    </div> -->
+
+    <div class="wrap">
+        <div class="form-wrap">
+            <div class="button-wrap">
+
+            </div>
+            <div class="social-icons">
+                <img src="img/zen9ssLogo.png" alt="logoimg">
+            </div>
+            <form id="login" action="main.html" class="input-group">
+                <input type="text" class="input-field" placeholder="User name or Email" required>
+                <input type="password" class="input-field" placeholder="Enter Password" required>
+                <input type="checkbox" class="checkbox"><span>Remember Password</span>
+                <button class="submit">login</button>
+            </form>
+        </div>
     </div>
-
-    <script>
-
-
-    </script>
 </body>
 
 </html>
